--- a/Security.mediawiki
+++ b/Security.mediawiki
@@ -16,9 +16,11 @@ Details on the way we classify security bugs can be [[Security Severity Ratings|
 == Security at Mozilla ==
 === Who are we? ===
 Security at Mozilla is distributed among the following teams:
-* [[SecurityEngineering|Security Engineering]]: Development of Firefox & underlying platform security features.
-* [[Security/InfoSec|Enterprise Information Security]]: Defines and operates security controls across the organization.
-* [[Security/FoxSec|Firefox Services Security]]: Securing core Firefox services.
+* [[SecurityEngineering|Security Engineering]] makes users of Firefox safer on the Internet.
+* [[Security/FoxSec|Firefox Operations Security]] protects the Firefox infrastructure and builds security services.
+* Firefox Product Security Assurance helps engineers ship secure code.
+* Firefox Fuzzing finds vulnerabilities in Firefox.
+* [[Security/InfoSec|Enterprise Information Security]] defines and operates security controls across the organization.
 
 === Contacting Us ===
 The Mozilla security team is available via a number of channels:
