--- a/IAM/Frequently_asked_questions.mediawiki
+++ b/IAM/Frequently_asked_questions.mediawiki
@@ -123,7 +123,7 @@ Two-factor authentication can be configured by using a Time-based One-Time Passw
 ==== '''Q''': ''The email address I use to login to my Mozillians account matches the primary email of my Firefox Accounts account. How can I upgrade my Mozillians account from Passwordless to Firefox Accounts?'' ====
 
 1.  In the following steps we assume you have 2FA set for your Firefox Accounts account. If not, see the steps from [https://blog.mozilla.org/services/2018/05/22/two-step-authentication-in-firefox-accounts/ here].<br>
-2.  Navigate to mozillians page and click Log In/Sign Up button. <br>
+2.  Navigate to mozillians page and click Log In/Sign Up button. 
 3.  Select “Continue with Firefox” method from mozillians login page. <br>
    [[File:3_-_moz_login.png|350px]]
 4.  Enter Firefox Accounts credentials.
