--- a/IAM/Frequently_asked_questions.mediawiki
+++ b/IAM/Frequently_asked_questions.mediawiki
@@ -221,7 +221,7 @@ There are some known issues with using Firefox Accounts in Mozilla IAM:
 When you login using an email link, that link is valid for 15 minutes from when you request it.
 This expiration window of 15 minutes is driven both by security considerations and a desire for
 a positive user experience. The link is short lived so that there is a limited window
-of time during which an attacker could use the link if they were able to get access
+of time during which a potential attacker could use the link if they were able to get access
 to it. This is especially important due to the inherently insecure nature of email
 transmission. The user experience of having to wait for over 15 minutes to log into
 a website is one that we want to ensure our users don't experience.
