--- a/IAM/Frequently_asked_questions.mediawiki
+++ b/IAM/Frequently_asked_questions.mediawiki
@@ -256,7 +256,7 @@ available to them. There's nothing that Mozilla can do on the sending side to
 force the user's Greylisting mail server to accept and deliver the email.
 
 Users sometime ask to just increase the expiration time, for example to 30 or 60
-minutes. We've not made this change because doing so would not solve the problem
+minutes. We deliberately have not made this change because doing so would decrease our systems' security while not addressing the root cause of this problem.
 and we don't want to present a user experience where a user would have to wait 30
 minutes to be able to log into a website. Instead we ask that users either contact
 their email provider to ask to have Greylisting disabled or have Mozilla whitelisted,
