--- a/IAM/Frequently_asked_questions.mediawiki
+++ b/IAM/Frequently_asked_questions.mediawiki
@@ -234,7 +234,7 @@ immediately.
 Short delays in delivery are just part of how email delivery works.
 Longer delays however can be caused by a feature called [https://en.wikipedia.org/wiki/Greylisting Greylisting].
 
-==== '''Q''': ''What is email greylisting?'' ==== 
+==== '''Q''': ''What is email greylisting?'' ====
 Some email providers institute Greylisting on all inbound email for their users
 as a measure to reduce spam. Greylisting temporarily rejects email from mail servers
 where the sender hasn't communicated with the recipient before or due to some other
@@ -259,10 +259,11 @@ force the user's Greylisting mail server to accept and deliver the email.
 Users sometime ask to just increase the expiration time, for example to 30 or 60
 minutes. We deliberately have not made this change because doing so would decrease our systems' security while not addressing the root cause of this problem.
 and we don't want to present a user experience where a user would have to wait 30
-minutes to be able to log into a website. Instead we ask that users either contact
-their email provider to ask to have Greylisting disabled or have Mozilla whitelisted,
-or use an alternative login method to email links, or use an email address of a
-different email provider that doesn't employ Greylisting.
+minutes to be able to log into a website. Instead, we ask that users either
+* contact their email provider to ask to have Greylisting disabled
+* have Mozilla whitelisted
+* use an alternative login method to email links
+* use an email address of a different email provider that doesn't employ Greylisting.
 
 === New Login Experience FAQ (Frequently Asked Questions) ===
 
