--- a/IAM/Frequently_asked_questions.mediawiki
+++ b/IAM/Frequently_asked_questions.mediawiki
@@ -223,7 +223,7 @@ This expiration window of 15 minutes is driven both by security considerations a
 a positive user experience. The link is short lived so that there is a limited window
 of time during which a potential attacker could use the link if they were able to get access
 to it. This is especially important due to the inherently insecure nature of email
-transmission. The user experience of having to wait for over 15 minutes to log into
+transmission. 
 a website is one that we want to ensure our users don't experience.
 
 During the past 18+ months, experience shows that for a vast majority of users, this 15 minute expiration window has no effect on
