--- a/IAM/Frequently_asked_questions.mediawiki
+++ b/IAM/Frequently_asked_questions.mediawiki
@@ -257,7 +257,7 @@ force the user's Greylisting mail server to accept and deliver the email.
 
 Users sometimes ask to just increase the expiration time, for example to 30 or 60
 minutes. We deliberately have not made this change because doing so would decrease our systems' security while not addressing the root cause of this problem (Greylisting).
-minutes to be able to log into a website. Instead, we ask that users either:
+Instead, we ask that users either:
 * contact their email provider to ask to have Greylisting disabled
 * have Mozilla whitelisted
 * use an alternative login method to email links
