--- a/IAM/Frequently_asked_questions.mediawiki
+++ b/IAM/Frequently_asked_questions.mediawiki
@@ -243,7 +243,7 @@ time and the Greylisting mail server will eventually accept the mail. In the cas
 of a "transactional" email like the email login link,
 [https://en.wikipedia.org/wiki/Greylisting#Delayed_delivery_issues Greylisting prevents users from being able to do a real-time login].
 
- ==== '''Q''': ''What can I do about my email provider's greylisting?'' ==== 
+ ==== '''Q''': ''What can I do about my email provider's Greylisting?'' ==== 
 Users who have email providers that use Greylisting will likely see this type of
 severely delayed transactional emails from other senders as well, for example
 when they sign up to a new web site and that web site sends them an email with a
