--- a/Security/Data_Classification.mediawiki
+++ b/Security/Data_Classification.mediawiki
@@ -37,7 +37,7 @@ The Enterprise Information Security team maintains this document.
 |
 When sharing or distributing data, documents, etc. you are responsible for setting and changing a classification label.
 It is strongly advised that you use them with any tools and communications systems where Mozillians may share
-information (e.g.: Google docs, text documents, presentations, attachments to emails, IRC topics, and other digital media documents).
+information (e.g.: Google docs, text documents, presentations, attachments to emails, Matrix topics, and other digital media documents).
 |}
 
 {| class="wikitable"
@@ -160,19 +160,19 @@ the document.
 * center;">Mozilla Confidential - Specific Individuals Only</span> information '''must''' be labeled in the subject line and should not be forwarded without the original senders express permission.
 * For other emails, optionally label subjects with the appropriate classification. This one is up to you, but we encourage you to label emails when the subject is sensitive and it is important to alert recipients.
 
-== IRC ==
+== Matrix ==
 
-Set your IRC channel topic to start with the classification label. This is also recommended for public channels.
+Set your Matrix channel topic to start with the classification label. This is also recommended for public channels.
 
 Also ensure that non-public channels are protected by password or channel access control.
 
 Remember that <span style="background-color: #ffd351; border-radius: .25em; color: #594300; display: inline-block;font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align:
 center;">Mozilla Confidential - Specific Work Groups Only</span> and <span style="background-color: #d04437;border-radius: .25em; color: #ffffff; display: inline-block; font-weight: bold;margin: .1em 0; min-width: 6em; padding:
-.05em .5em; text-transform: uppercase; text-align: center;">Mozilla Confidential - Specific Individuals Only</span> '''may not''' be shared on IRC.
+.05em .5em; text-transform: uppercase; text-align: center;">Mozilla Confidential - Specific Individuals Only</span> '''may not''' be shared on Matrix.
 
 Ex: "PUBLIC | This is a channel to discuss anything you like about Firefox".
 
-== Zoom, Hangouts, Skype and other video conference tools ==
+== Zoom, Hello, Hangouts, Skype and other video conference tools ==
 
 * When using video conferencing, if this is not a public call - ensure that only the people who need to know the information have access to the video conference and chat.
 * Verify the list of participants and verbally announce if you're going to share any non-public information.
